<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SintomasFragment">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="Next"
        android:text="NEXT" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </SearchView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </FrameLayout>

        <ScrollView
            android:layout_width="246dp"
            android:layout_height="548dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Sintoma1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_1" />

                <CheckBox
                    android:id="@+id/Sintoma2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_2" />

                <CheckBox
                    android:id="@+id/Sintoma3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_3" />

                <CheckBox
                    android:id="@+id/Sintoma4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_4" />

                <CheckBox
                    android:id="@+id/Sintoma5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_5" />

                <CheckBox
                    android:id="@+id/Sintoma6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_6" />

                <CheckBox
                    android:id="@+id/Sintoma7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_7" />

                <CheckBox
                    android:id="@+id/Sintoma8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_8" />

                <CheckBox
                    android:id="@+id/Sintoma9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_9" />

                <CheckBox
                    android:id="@+id/Sintoma10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_10" />

                <CheckBox
                    android:id="@+id/Sintoma11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_11" />

                <CheckBox
                    android:id="@+id/Sintoma12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_12" />

                <CheckBox
                    android:id="@+id/Sintoma13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sintoma_13" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="CORONAVIRUS"
        android:textSize="50sp" />

</FrameLayout>